# antigravity-cli-status-win

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
legacy-js/: statusline.js  title.js
src/: cli.rs  config.rs  crypto.rs  lib.rs  main.rs  merge.rs  os_win.rs  path.rs  platform.rs  refresh.rs  render.rs  statusline.rs  theme.rs  title.rs  types.rs  utils.rs  widget.rs
